# claude-code-adobe-firefly

./: .env.example  .gitignore  CLAUDE.md  EXECUTIVE_SUMMARY.md  LICENSE  README.md  package.json
.claude/: settings.json
.claude-plugins/ralph-wiggum/commands/: cancel-ralph.md  help.md  ralph-loop.md
.claude-plugins/ralph-wiggum/hooks/: stop-hook.sh
.claude-plugins/ralph-wiggum/scripts/: setup-ralph-loop.sh
.claude/agents/: firefly-creative.md
.claude/agents/adobe-firefly/: firefly-editor.md  firefly-workflow.md
.claude/commands/: firefly-batch.md  firefly-generate.md  firefly-workflow.md
.claude/commands/adobe-firefly/: firefly-edit.md
.claude/skills/: firefly-api.md  firefly-prompts.md
apps/firefly_examples/: 01_generate_image.py  02_remove_background.py  03_expand_image.py  04_style_transfer.py  05_claude_agent_workflow.py  06_batch_processing.py  07_image_variations.py  README.md
apps/firefly_mcp/: README.md  pyproject.toml  server.py
apps/firefly_mcp/tests/: __init__.py  conftest.py  test_server.py
apps/firefly_mcp_hub/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  eslint.config.mjs  package.json  tsconfig.json
apps/firefly_mcp_hub/src/: asset.ts  index.ts  logger.ts  server.ts  types.ts
apps/firefly_mcp_hub/src/content/: index.ts
apps/firefly_mcp_hub/src/firefly/: index.ts
apps/firefly_sdk/: README.md  pyproject.toml
apps/firefly_sdk/src/firefly_sdk/: __init__.py  agent.py  cli.py  client.py  mocks.py  models.py
apps/firefly_sdk/tests/: conftest.py  test_agent.py  test_cli.py  test_client.py  test_models.py
apps/sandbox_motia/: README.md  package.json
apps/sandbox_motia/src/: index.ts
apps/sandbox_temporal/: Dockerfile  README.md  pyproject.toml
apps/sandbox_temporal/src/: __init__.py
apps/sandbox_temporal/src/activities/: __init__.py  agent_activities.py  observability_activities.py  sandbox_activities.py
apps/sandbox_temporal/src/client/: __init__.py  cli.py
apps/sandbox_temporal/src/models/: __init__.py  schemas.py
apps/sandbox_temporal/src/workers/: __init__.py  sandbox_worker.py
apps/sandbox_temporal/src/workflows/: __init__.py  cleanup_workflow.py  fork_workflow.py  orchestration_workflow.py
docker/: README.md  docker-compose.yaml
docker/grafana/dashboards/: sandbox-orchestration.json
docker/prometheus/: prometheus.yml
docker/temporal/dynamicconfig/: development.yaml
docs/: README.md
docs/adobe/: adobe-brand-foundation.md  adobe-max-2025-creative-cloud.md  agentic-engineering-adobe-perspective.md  post-max-strategy-viewer.html  post-max-strategy-visualizations.md
docs/examples/: 01-saas-landing-page.md  02-product-showcase.md  03-creative-portfolio.md  04-dashboard-app.md  05-parallel-design-exploration.md  06-ab-landing-page-scale.md  07-brand-identity-exploration.md  08-product-photography-pipeline.md  09-adobe-max-announcement-campaign.md  10-adobe-brand-asset-factory.md  11-firefly-model-5-showcase.md  12-adobe-customer-content-engine.md
specs/: firefly-reference-integration.md  sandbox-durability-observability-plan.md
src/: firefly-client.ts  index.ts
(+15 files in other folders)
