[project]
name = "sandbox-temporal"
version = "0.1.0"
description = "Durable sandbox orchestration with Temporal.io"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "e2b>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sandbox-temporal = "src.client.cli:app"
sandbox-worker = "src.workers.sandbox_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
